# onesided

./: .gitignore  API.rst  README.rst  db.json  huh.md  micc3.cfg  output.txt  pyproject.toml  thoughts-on-noncontiguous-data.md
docs/: Makefile  conf.py  index.rst  installation.rst
onesided/: __init__.py
onesided/core/: ArrayInfo.hpp  CMakeLists.txt  Communicator.cpp  Communicator.h  LessonsLearned.md  Message.cpp  Message.h  MessageBox.cpp  MessageBox.h  MessageBox.hpp  MessageBuffer.cpp  MessageBuffer.h  MessageHandler.cpp  MessageHandler.h  Messenger.cpp  Messenger.h  core.cpp  core.cpp.bak1  core.rst  memcpy_able.h  mpi12s.cpp  mpi12s.h  mpi1s.cpp  mpi1s.h  types.h
tests/: __init__.py
tests/onesided/: test_onesided.py
tests/onesided/core/: test_core.py
